# semiring-parsing

./: semiring-parsing.cabal
script/: ghci-flags  ghci-flags-dependencies
src/: Examples.hs
src/Data/: Indexable.hs  Semimodule.hs  Semiring.hs
src/Data/Functor/: Trie.hs
src/Data/Map/: Modular.hs
src/Data/Semiring/: Internal.hs
