cabal-version:       2.2

name:                semiring-parsing
version:             0.0.0.0
synopsis:            Parsing with semirings
-- description:
homepage:            https://github.com/robrix/semiring-parsing
bug-reports:         https://github.com/robrix/semiring-parsing/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2020 Rob Rix
category:            Language

library
  exposed-modules:
    Data.Indexable
    Data.Semimodule
    Data.Semiring
  build-depends:
    , base ^>=4.13.0.0
  hs-source-dirs: src
  default-language: Haskell2010
